Repository foundation - CodeSmells
Code Smells detection
Initial solution Documentation in terms of features, installation, definition of refactoring action plans.